# ai-sentiment-analyzer

./: README.md  pyproject.toml  requirements.txt
src/: main.py
tests/: test_main.py
