[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sentiment-analyzer"
version = "0.1.0"
description = "A real-time sentiment analysis tool that processes social media streams and provides actionable insights for brand monitoring. The project demonstrates AI model integration with real-time data processing pipelines."
dependencies = ['fastapi', 'uvicorn', 'pandas', 'scikit-learn', 'plotly']

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
